tests/invalidTest/typeConvert/test_sint32_1.q
# EXPECT type cannot be converted
def uint16 test(){
  sint32 var0 = 2147483648     #def & constant num
  return 0
}

